fixed alignment of navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,10 @@ body {
 .dropdown-menu :hover {
   background-color: rgb(54, 54, 54);
 }
+.navbar-brand{
+  display: flex;
+  align-items: center;
+}
 .lead {
   display: flex;
   justify-content: center;
